--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -65,7 +65,7 @@ jobs:
             fi
           done
           rm assets/maps/* assets/images/* assets/art/*
-          git restore $ASSET_PATHS
+          git restore --source=HEAD $ASSET_PATHS
           echo $ASSET_PATHS
           git status
 
@@ -188,7 +188,7 @@ jobs:
       - name: Restore original map files for caching purposes
         run:
           MAP_FILES=$(grep -Po "maps[^}]*\.png" ${{ inputs.scenario_type }}/${{ matrix.scenario }}.tex | sort | uniq | sed 's|maps/||')
-          git restore "assets/maps/$map"
+          git restore --source=HEAD "assets/maps/$map"
           git status
 
       - name: Publish ${{ matrix.scenario }} [${{ inputs.language }}] in artifacts repository
