--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -65,18 +65,16 @@ jobs:
               KEEP_FILES="$KEEP_FILES $FULL_PATH"
             fi
           done
-          echo $KEEP_FILES
+
           for dir in assets/maps assets/images assets/art; do
             for file in "$dir"/*; do
               if [[ -f "$file" ]] && [[ ! " $KEEP_FILES " =~ " $file " ]]; then
-                echo "Deleting: $file"
                 rm "$file"
               else
-                echo "$file is on the list, not deleting!"
+                echo "Keeping $file"
               fi
             done
           done
-          git status
 
       - name: Adjust document structure
         run: |
