--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["en", "pl", "cs", "fr", "de"]
+        language: ["en", "pl", "cs", "fr"]
 
     steps:
       - name: Set up repository
@@ -203,7 +203,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["en", "pl", "cs", "fr", "de"]
+        language: ["en", "pl", "cs", "fr"]
 
     steps:
       - name: Set up repository
@@ -288,7 +288,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["pl", "cs", "fr", "de"]
+        language: ["pl", "cs", "fr"]
 
     steps:
       - name: Download PDFs
@@ -313,7 +313,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["en", "pl", "cs", "fr", "de"]
+        language: ["en", "pl", "cs", "fr"]
+    outputs:
+      should_trigger: ${{ steps.check.outputs.should_trigger }}
     steps:
       - name: Create dir
         run: mkdir ${{ matrix.language }}
@@ -339,3 +341,24 @@ jobs:
         if: ${{ matrix.language == 'en' }}
         with:
           name: monochrome-map-*
+
+      - name: Set trigger flag
+        id: check
+        if: matrix.language == 'en'
+        run: echo "should_trigger=true" >> $GITHUB_OUTPUT
+
+
+  call_build:
+    needs: publish
+    if: ${{ needs.publish.outputs.should_trigger == 'true' && github.event_name != 'pull_request' }}
+    uses: ./.github/workflows/build-individual-scenarios.yaml
+    strategy:
+      fail-fast: false
+      matrix:
+        scenario_type: ["clash", "coops", "campaigns"]
+        language: ["en", "pl", "cs", "fr"]
+    with:
+      scenario_type: ${{ matrix.scenario_type }}
+      language: ${{ matrix.language }}
+    secrets:
+      SSH_DEPLOY_KEY_BUILD_ARTIFACTS: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
