--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -27,227 +27,227 @@ jobs:
     steps:
       - name: Set up repository
         uses: actions/checkout@v4
-
-      - name: Cache built PDF
-        if: github.event_name == 'pull_request'
-        uses: actions/cache@v4
-        id: cache-pdf
-        with:
-          path: |
-            ./draft-scenarios/drafts.pdf
-          key: pdf-drafts-${{ hashFiles('draft-scenarios/**/*.tex', 'metadata.tex', 'assets/**/*') }}
-          restore-keys: |
-            pdf-drafts-
-
-      - name: Cache Inkscape artifacts
-        if: steps.cache-pdf.outputs.cache-hit != 'true'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./svg-inkscape
-          key: >-
-            inkscape-${{ hashFiles('assets/glyphs/*') }}
-          restore-keys: |
-            inkscape-
-
-      - name: Cache LaTeX build
-        if: steps.cache-pdf.outputs.cache-hit != 'true'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./draft-scenarios/**/*.aux
-            ./draft-scenarios/**/*.fdb_latexmk
-            ./draft-scenarios/**/*.fls
-            ./draft-scenarios/**/*.toc
-            ./draft-scenarios/**/*.out
-          key: texlive-drafts-${{ hashFiles('draft-scenarios/**/*.tex', 'metadata.tex', 'assets/**/*') }}
-          restore-keys: |
-            texlive-drafts-
-
-      - name: Compile draft book
-        if: steps.cache-pdf.outputs.cache-hit != 'true'
-        uses: xu-cheng/latex-action@v3
-        with:
-          extra_system_packages: "inkscape"
-          latexmk_use_lualatex: true
-          latexmk_shell_escape: true
-          pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1
-          root_file: drafts.tex
-
-      - name: Optimize PDF
-        if: steps.cache-pdf.outputs.cache-hit != 'true'
-        uses: qwrtln/optimize-pdf@v1
-        with:
-          file-name: draft-scenarios/drafts.pdf
-          quality-level: prepress
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: drafts
-          path: draft-scenarios/drafts.pdf
-          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
-
-
-  find_draft_map_files:
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - name: Set up repository
-        uses: actions/checkout@v4
-
-      - name: Find map files
-        id: set-matrix
-        run: |
-          IMAGES=$(find draft-scenarios -name "*tex" -exec grep -Po "maps[^}]*\.png" '{}' \; | sort | uniq | sed 's|maps/||')
-          echo $IMAGES
-          echo "matrix=$(echo "$IMAGES" | jq -R -s -c 'split("\n") | map(select(length > 0)) | {map: .}')" >> $GITHUB_OUTPUT
-
-
-  make_draft_maps_monochrome:
-    needs: [find_draft_map_files]
-    runs-on: ubuntu-latest
-    name: Convert ${{ matrix.map }}
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJson(needs.find_draft_map_files.outputs.matrix) }}
-    steps:
-      - name: Set up repository
-        uses: actions/checkout@v4
-
-      - name: Generate file hash
-        id: hash
-        run: |
-          HASH=$(sha256sum "assets/maps/${{ matrix.map }}" | cut -d ' ' -f 1)
-          echo "file_hash=$HASH" >> $GITHUB_OUTPUT
-
-      - name: Check processed map cache
-        id: cache-map
-        uses: actions/cache@v4
-        with:
-          path: assets/maps/${{ matrix.map }}
-          key: monochrome-map-${{ steps.hash.outputs.file_hash }}
-
-      - name: Cache ImageMagick AppImage
-        if: steps.cache-map.outputs.cache-hit != 'true'
-        id: cache-magick
-        uses: actions/cache@v4
-        with:
-          path: /usr/local/bin/magick
-          key: imagemagick-${{ env.IMAGEMAGICK_URL }}
-
-      - name: Install magick
-        if: steps.cache-map.outputs.cache-hit != 'true'
-        run: |
-          sudo add-apt-repository universe
-          sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
-
-          if [[ ! -f /usr/local/bin/magick ]]; then
-            echo "No cache found, downloading ImageMagick AppImage."
-            wget --quiet ${{ env.IMAGEMAGICK_URL }} -O magick
-            chmod +x magick
-            mv magick /usr/local/bin/magick
-          fi
-
-      - name: Process map file
-        if: steps.cache-map.outputs.cache-hit != 'true'
-        run: tools/to_monochrome.sh "assets/maps/${{ matrix.map }}"
-
-      - name: Upload processed file
-        uses: actions/upload-artifact@v4
-        with:
-          name: monochrome-map-${{ hashFiles(format('assets/maps/{0}', matrix.map)) }}
-          path: assets/maps/${{ matrix.map }}
-          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
-
-  build_draft_monochrome:
-    needs: [make_draft_maps_monochrome]
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: draft-scenarios
-
-    steps:
-      - name: Set up repository
-        uses: actions/checkout@v4
-
-      - name: Download monochrome maps
-        uses: actions/download-artifact@v4
-        with:
-          pattern: monochrome-map-*
-          path: assets/maps
-          merge-multiple: true
-
-      - name: Cache Inkscape artifacts
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./svg-inkscape
-          key: >-
-            inkscape-${{ hashFiles('assets/glyphs/*') }}
-          restore-keys: |
-            inkscape-
-
-      - name: Cache LaTeX build
-        uses: actions/cache@v4
-        with:
-          path: |
-            ./draft-scenarios/**/*.aux
-            ./draft-scenarios/**/*.fdb_latexmk
-            ./draft-scenarios/**/*.fls
-            ./draft-scenarios/**/*.toc
-            ./draft-scenarios/**/*.out
-          key: texlive-drafts-mono-${{ hashFiles('draft-scenarios/**/*.tex', 'metadata.tex', 'assets/**/*') }}
-          restore-keys: |
-            texlive-drafts-mono-
-
-      - name: Compile monochrome draft book
-        uses: xu-cheng/latex-action@v3
-        with:
-          extra_system_packages: "inkscape"
-          latexmk_use_lualatex: true
-          latexmk_shell_escape: true
-          pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
-          root_file: drafts.tex
-
-      - name: Optimize PDF
-        uses: qwrtln/optimize-pdf@v1
-        with:
-          file-name: draft-scenarios/drafts.pdf
-          quality-level: prepress
-          output-file: draft-scenarios/drafts-mono.pdf
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: drafts-mono
-          path: draft-scenarios/drafts-mono.pdf
-          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: [build, build_draft_monochrome]
-    steps:
-      - name: Create dir
-        run: mkdir drafts
-
-      - name: Download regular draft PDF
-        uses: actions/download-artifact@v4
-        with:
-          pattern: drafts*
-          path: drafts
-          merge-multiple: true
-
-      - name: Publish drafts in artifacts repository
-        uses: peaceiris/actions-gh-pages@v4
-        if: github.event_name != 'pull_request'
-        with:
-          deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
-          external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
-          publish_branch: drafts
-          publish_dir: ./drafts
-          force_orphan: true
-
-      - uses: geekyeggo/delete-artifact@v5
-        with:
-          name: monochrome-map-*
+  #
+  #     - name: Cache built PDF
+  #       if: github.event_name == 'pull_request'
+  #       uses: actions/cache@v4
+  #       id: cache-pdf
+  #       with:
+  #         path: |
+  #           ./draft-scenarios/drafts.pdf
+  #         key: pdf-drafts-${{ hashFiles('draft-scenarios/**/*.tex', 'metadata.tex', 'assets/**/*') }}
+  #         restore-keys: |
+  #           pdf-drafts-
+  #
+  #     - name: Cache Inkscape artifacts
+  #       if: steps.cache-pdf.outputs.cache-hit != 'true'
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ./svg-inkscape
+  #         key: >-
+  #           inkscape-${{ hashFiles('assets/glyphs/*') }}
+  #         restore-keys: |
+  #           inkscape-
+  #
+  #     - name: Cache LaTeX build
+  #       if: steps.cache-pdf.outputs.cache-hit != 'true'
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ./draft-scenarios/**/*.aux
+  #           ./draft-scenarios/**/*.fdb_latexmk
+  #           ./draft-scenarios/**/*.fls
+  #           ./draft-scenarios/**/*.toc
+  #           ./draft-scenarios/**/*.out
+  #         key: texlive-drafts-${{ hashFiles('draft-scenarios/**/*.tex', 'metadata.tex', 'assets/**/*') }}
+  #         restore-keys: |
+  #           texlive-drafts-
+  #
+  #     - name: Compile draft book
+  #       if: steps.cache-pdf.outputs.cache-hit != 'true'
+  #       uses: xu-cheng/latex-action@v3
+  #       with:
+  #         extra_system_packages: "inkscape"
+  #         latexmk_use_lualatex: true
+  #         latexmk_shell_escape: true
+  #         pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1
+  #         root_file: drafts.tex
+  #
+  #     - name: Optimize PDF
+  #       if: steps.cache-pdf.outputs.cache-hit != 'true'
+  #       uses: qwrtln/optimize-pdf@v1
+  #       with:
+  #         file-name: draft-scenarios/drafts.pdf
+  #         quality-level: prepress
+  #
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: drafts
+  #         path: draft-scenarios/drafts.pdf
+  #         retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+  #
+  #
+  # find_draft_map_files:
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name != 'pull_request'
+  #   outputs:
+  #     matrix: ${{ steps.set-matrix.outputs.matrix }}
+  #   steps:
+  #     - name: Set up repository
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Find map files
+  #       id: set-matrix
+  #       run: |
+  #         IMAGES=$(find draft-scenarios -name "*tex" -exec grep -Po "maps[^}]*\.png" '{}' \; | sort | uniq | sed 's|maps/||')
+  #         echo $IMAGES
+  #         echo "matrix=$(echo "$IMAGES" | jq -R -s -c 'split("\n") | map(select(length > 0)) | {map: .}')" >> $GITHUB_OUTPUT
+  #
+  #
+  # make_draft_maps_monochrome:
+  #   needs: [find_draft_map_files]
+  #   runs-on: ubuntu-latest
+  #   name: Convert ${{ matrix.map }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix: ${{ fromJson(needs.find_draft_map_files.outputs.matrix) }}
+  #   steps:
+  #     - name: Set up repository
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Generate file hash
+  #       id: hash
+  #       run: |
+  #         HASH=$(sha256sum "assets/maps/${{ matrix.map }}" | cut -d ' ' -f 1)
+  #         echo "file_hash=$HASH" >> $GITHUB_OUTPUT
+  #
+  #     - name: Check processed map cache
+  #       id: cache-map
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: assets/maps/${{ matrix.map }}
+  #         key: monochrome-map-${{ steps.hash.outputs.file_hash }}
+  #
+  #     - name: Cache ImageMagick AppImage
+  #       if: steps.cache-map.outputs.cache-hit != 'true'
+  #       id: cache-magick
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: /usr/local/bin/magick
+  #         key: imagemagick-${{ env.IMAGEMAGICK_URL }}
+  #
+  #     - name: Install magick
+  #       if: steps.cache-map.outputs.cache-hit != 'true'
+  #       run: |
+  #         sudo add-apt-repository universe
+  #         sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
+  #
+  #         if [[ ! -f /usr/local/bin/magick ]]; then
+  #           echo "No cache found, downloading ImageMagick AppImage."
+  #           wget --quiet ${{ env.IMAGEMAGICK_URL }} -O magick
+  #           chmod +x magick
+  #           mv magick /usr/local/bin/magick
+  #         fi
+  #
+  #     - name: Process map file
+  #       if: steps.cache-map.outputs.cache-hit != 'true'
+  #       run: tools/to_monochrome.sh "assets/maps/${{ matrix.map }}"
+  #
+  #     - name: Upload processed file
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: monochrome-map-${{ hashFiles(format('assets/maps/{0}', matrix.map)) }}
+  #         path: assets/maps/${{ matrix.map }}
+  #         retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+  #
+  # build_draft_monochrome:
+  #   needs: [make_draft_maps_monochrome]
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: draft-scenarios
+  #
+  #   steps:
+  #     - name: Set up repository
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Download monochrome maps
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         pattern: monochrome-map-*
+  #         path: assets/maps
+  #         merge-multiple: true
+  #
+  #     - name: Cache Inkscape artifacts
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ./svg-inkscape
+  #         key: >-
+  #           inkscape-${{ hashFiles('assets/glyphs/*') }}
+  #         restore-keys: |
+  #           inkscape-
+  #
+  #     - name: Cache LaTeX build
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ./draft-scenarios/**/*.aux
+  #           ./draft-scenarios/**/*.fdb_latexmk
+  #           ./draft-scenarios/**/*.fls
+  #           ./draft-scenarios/**/*.toc
+  #           ./draft-scenarios/**/*.out
+  #         key: texlive-drafts-mono-${{ hashFiles('draft-scenarios/**/*.tex', 'metadata.tex', 'assets/**/*') }}
+  #         restore-keys: |
+  #           texlive-drafts-mono-
+  #
+  #     - name: Compile monochrome draft book
+  #       uses: xu-cheng/latex-action@v3
+  #       with:
+  #         extra_system_packages: "inkscape"
+  #         latexmk_use_lualatex: true
+  #         latexmk_shell_escape: true
+  #         pre_compile: cd draft-scenarios && export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
+  #         root_file: drafts.tex
+  #
+  #     - name: Optimize PDF
+  #       uses: qwrtln/optimize-pdf@v1
+  #       with:
+  #         file-name: draft-scenarios/drafts.pdf
+  #         quality-level: prepress
+  #         output-file: draft-scenarios/drafts-mono.pdf
+  #
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: drafts-mono
+  #         path: draft-scenarios/drafts-mono.pdf
+  #         retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+  #
+  # publish:
+  #   runs-on: ubuntu-latest
+  #   needs: [build, build_draft_monochrome]
+  #   steps:
+  #     - name: Create dir
+  #       run: mkdir drafts
+  #
+  #     - name: Download regular draft PDF
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         pattern: drafts*
+  #         path: drafts
+  #         merge-multiple: true
+  #
+  #     - name: Publish drafts in artifacts repository
+  #       uses: peaceiris/actions-gh-pages@v4
+  #       if: github.event_name != 'pull_request'
+  #       with:
+  #         deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
+  #         external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
+  #         publish_branch: drafts
+  #         publish_dir: ./drafts
+  #         force_orphan: true
+  #
+  #     - uses: geekyeggo/delete-artifact@v5
+  #       with:
+  #         name: monochrome-map-*
