--- a/.github/workflows/trigger-build-scenarios.yaml
+++ b/.github/workflows/trigger-build-scenarios.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scenario_type: ["draft-scenarios/coops", "draft-scenarios/clash", "draft-scenarios/campaigns", "draft-scenarios/sections"]
+        scenario_type: ["draft-scenarios/clash", "draft-scenarios/campaigns", "draft-scenarios/sections"]
         language: ["en"]
     with:
       scenario_type: ${{ matrix.scenario_type }}
