--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -44,7 +44,7 @@ jobs:
             pdf-${{ matrix.language }}-${{
             matrix.language == 'en'
             && hashFiles('main_en.tex', 'metadata.tex', 'structure.tex', 'campaigns/*.tex', 'coops/*.tex', 'clash/*.tex', 'sections/*.tex', 'assets/**/*')
-            || hashFiles('main_${{ matrix.language }}.tex', 'metadata.tex', 'structure.tex', format('**/{0}/*.tex', matrix.language), 'assets/**/*')
+            || hashFiles(format('main_{0}.tex', matrix.language), 'metadata.tex', 'structure.tex', format('**/{0}/*.tex', matrix.language), 'assets/**/*')
             }}
           restore-keys: |
             pdf-${{ matrix.language }}-
@@ -78,7 +78,7 @@ jobs:
             texlive-mission-${{ matrix.language }}-${{
             matrix.language == 'en'
             && hashFiles('main_en.tex', 'metadata.tex', 'structure.tex', 'campaigns/*.tex', 'coops/*.tex', 'clash/*.tex', 'sections/*.tex', 'assets/**/*')
-            || hashFiles('main_${{ matrix.language }}.tex', 'metadata.tex', 'structure.tex', format('**/{0}/*.tex', matrix.language), 'assets/**/*')
+            || hashFiles(format('main_{0}.tex', matrix.language), 'metadata.tex', 'structure.tex', format('**/{0}/*.tex', matrix.language), 'assets/**/*')
             }}
           restore-keys: |
             texlive-mission-${{ matrix.language }}-
@@ -244,7 +244,7 @@ jobs:
             texlive-mission-mono-${{ matrix.language }}-${{
             matrix.language == 'en'
             && hashFiles('main_en.tex', 'metadata.tex', 'structure.tex', 'campaigns/*.tex', 'coops/*.tex', 'clash/*.tex', 'sections/*.tex', 'assets/**/*')
-            || hashFiles('main_${{ matrix.language }}.tex', 'metadata.tex', 'structure.tex', format('**/{0}/*.tex', matrix.language), 'assets/**/*')
+            || hashFiles(format('main_{0}.tex', matrix.language), 'metadata.tex', 'structure.tex', format('**/{0}/*.tex', matrix.language), 'assets/**/*')
             }}
           restore-keys: |
             texlive-mission-mono-${{ matrix.language }}-
