Restore workflow state

--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -18,7 +18,7 @@ on:
 env:
   ARTIFACT_RETENTION_DAYS: 1
   IMAGEMAGICK_URL: https://github.com/ImageMagick/ImageMagick/releases/download/7.1.1-46/ImageMagick-8209e84-gcc-x86_64.AppImage
-  EXCLUDE_LIST: title_page\|back_cover\|recommendations\|credits\|what_to_play
+  EXCLUDE_LIST: title_page\|back_cover\|recommendations\|credits\|what_to_play\|notes
 
 jobs:
   find_scenarios:
@@ -81,27 +81,6 @@ jobs:
         run: |
           echo ${{ matrix.scenario }}
           tools/_find_scenario.sh ${{ matrix.scenario }}
-
-      - name: Debug cache key components
-        run: |
-          echo "=== Cache Key Debug ==="
-          echo "Language: ${{ inputs.language }}"
-          echo "Scenario: ${{ matrix.scenario }}"
-          echo "Scenario type: ${{ inputs.scenario_type }}"
-          echo ""
-          echo "=== File paths being hashed ==="
-          echo "Main file: ${{ format('main_{0}.tex', inputs.language) }}"
-          echo "Translated file: ${{ format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, inputs.language, matrix.scenario) }}"
-          echo ""
-          echo "=== File existence check ==="
-          ls -la ${{ format('main_{0}.tex', inputs.language) }} || echo "Main file not found"
-          ls -la ${{ format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, inputs.language, matrix.scenario) }} || echo "Translated file not found"
-          echo ""
-          echo "=== Individual file hashes ==="
-          echo "metadata.tex: $(sha256sum metadata.tex)"
-          echo "structure.tex: $(sha256sum structure.tex)"
-          echo "main_pl.tex: $(sha256sum ${{ format('main_{0}.tex', inputs.language) }})"
-          echo "translated file: $(sha256sum ${{ format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, inputs.language, matrix.scenario) }})"
 
       - name: Cache built PDF
         uses: actions/cache@v4
