Debug cache key output (#273)

--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -18,7 +18,7 @@ on:
 env:
   ARTIFACT_RETENTION_DAYS: 1
   IMAGEMAGICK_URL: https://github.com/ImageMagick/ImageMagick/releases/download/7.1.1-46/ImageMagick-8209e84-gcc-x86_64.AppImage
-  EXCLUDE_LIST: title_page\|back_cover
+  EXCLUDE_LIST: title_page\|back_cover\|recommendations\|credits\|what_to_play\|notes
 
 jobs:
   find_scenarios:
@@ -90,9 +90,9 @@ jobs:
             ./${{ matrix.scenario }}_${{ inputs.language }}.pdf
           key: >-
             pdf-${{ matrix.scenario }}-${{ inputs.language }}-${{
-            matrix.language == 'en'
+            inputs.language == 'en'
             && hashFiles('main_en.tex', 'metadata.tex', 'structure.tex', format('{0}/{1}.tex', inputs.scenario_type, matrix.scenario), 'assets/**/*')
-            || hashFiles(format('main_{0}.tex', matrix.language), 'metadata.tex', 'structure.tex', format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, matrix.language, matrix.scenario), 'assets/**/*')
+            || hashFiles(format('main_{0}.tex', inputs.language), 'metadata.tex', 'structure.tex', format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, inputs.language, matrix.scenario), 'assets/**/*')
             }}
           restore-keys: |
             pdf-${{ matrix.scenario }}-${{ inputs.language }}-
@@ -139,9 +139,9 @@ jobs:
             ./${{ matrix.scenario }}_${{ inputs.language }}_mono.pdf
           key: >-
             pdf-${{ matrix.scenario }}-${{ inputs.language }}-mono-${{
-            matrix.language == 'en'
+            inputs.language == 'en'
             && hashFiles('main_en.tex', 'metadata.tex', 'structure.tex', format('{0}/{1}.tex', inputs.scenario_type, matrix.scenario), 'assets/**/*')
-            || hashFiles(format('main_{0}.tex', matrix.language), 'metadata.tex', 'structure.tex', format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, matrix.language, matrix.scenario), 'assets/**/*')
+            || hashFiles(format('main_{0}.tex', inputs.language), 'metadata.tex', 'structure.tex', format('{0}/translated/{1}/{2}.tex', inputs.scenario_type, inputs.language, matrix.scenario), 'assets/**/*')
             }}
           restore-keys: |
             pdf-${{ matrix.scenario }}-${{ inputs.language }}-mono-
